added admin portal and login

--- a/Softablitz_project/src/frontPage/Home_Screen.form
+++ b/Softablitz_project/src/frontPage/Home_Screen.form
@@ -67,7 +67,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="178" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="jButton1" max="32767" attributes="0"/>
+                                      <Component id="railwatBtn" max="32767" attributes="0"/>
                                       <Component id="jButton2" max="32767" attributes="0"/>
                                       <Component id="jButton3" max="32767" attributes="0"/>
                                   </Group>
@@ -92,7 +92,7 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="railwatBtn" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
@@ -128,7 +128,7 @@
             <Property name="text" type="java.lang.String" value="BOOKINGS"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="railwatBtn">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="SEGA LOGO FONT" size="14" style="0"/>
